--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "async-sema": "^3.1.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6"
+    "@types/node": "^16.11.6",
+    "typescript": "^5.6.2"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
