--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "license": "MIT",
   "dependencies": {
     "async-sema": "^3.1.1"
   },
